codex-rs/core/tests/suite/snapshots/all__suite__scenarios__mailbox_preemption__mailbox_preemption_commentary_deferred_true.snap
---
source: core/tests/suite/scenarios_mailbox_preemption_tests.rs
expression: "context_snapshot::format_context_snapshot(\"Worker messages arrive during a response. Deferred mailbox preemption lets the planned tool execute before the next request receives both messages.\",\n&entries, &ContextSnapshotOptions::default().rewrite_known_segments(),)"
---
Scenario: Worker messages arrive during a response. Deferred mailbox preemption lets the planned tool execute before the next request receives both messages.

## Window 1
-- request 1 (request) --
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <USAGE_STATS_INSTRUCTIONS>
    [03] <PROJECT_AUTOMATION_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    Plan the next action while the worker finishes.
-- request 2 (request) --
03:message/assistant:
    I will update the plan.
04:function_call/update_plan:{"plan":[{"status":"in_progress","step":"Reply to the user"}]}
05:function_call_output:Plan updated
06:agent_message
07:agent_message
